wip: working at nailing down nextcloud all in one collabora

--- a/roles/services/nextcloud-aio/tasks/main.yml
+++ b/roles/services/nextcloud-aio/tasks/main.yml
@@ -1,85 +1,102 @@
-- name: "Make sure - NextCloud All In One container is created and running"
-  become: yes
+# - name: "Ensure nextcloud-aio-mastercontainer is running"
+#   docker_container:
+#     container_default_behavior: compatibility
+#     networks_cli_compatible: yes
+#     name: nextcloud-aio-mastercontainer
+#     image: nextcloud/all-in-one:latest
+#     restart_policy: unless-stopped
+#     published_ports:
+#       - "8102:8080"
+#     networks:
+#       - name: proxy
+#         aliases:
+#           - nextcloud
+#       - name: nextcloud-aio
+#         aliases:
+#           - nextcloud-aio-mastercontainer
+#     pull: yes
+#     state: 'started'
+#     env:
+#       PUID: "{{ puid }}"
+#       PGID: "{{ pgid }}"
+#       TZ: "{{ timezone }}"
+#       AIO_ADDITIONAL_NETWORKS: "proxy"
+#       APACHE_ADDITIONAL_NETWORK: "proxy"
+#       COLLABORA_ADDITIONAL_NETWORK: "proxy"
+#       TALK_ADDITIONAL_NETWORK: "proxy"
+#       CLAMAV_ADDITIONAL_NETWORK: "proxy"
+#       NEXTCLOUD_DATADIR: "{{ brick_root }}/nextcloud/ncdata"
+#       NEXTCLOUD_MOUNT: "{{ brick_root }}/nextcloud"
+#       NEXTCLOUD_TRUSTED_DOMAINS: "nextcloud.{{ domain }} nextcloud-aio-apache"
+#       NEXTCLOUD_TRUSTED_PROXIES: "proxy"
+#       NEXTCLOUD_ADDITIONAL_TRUSTED_DOMAINS: "nextcloud-aio-apache"
+#       NEXTCLOUD_ADDITIONAL_APCU_FAST_SHUTDOWN: "1"
+#       NEXTCLOUD_OVERWRITEPROTOCOL: "https"
+#       NEXTCLOUD_OVERWRITE_CLI_URL: "https://nextcloud.{{ domain }}"
+#       APACHE_PORT: "11000"
+#       APACHE_LISTEN: "11000"
+#       APACHE_IP_BINDING: "0.0.0.0"
+#       NC_DOMAIN: "nextcloud.{{ domain }}"
+#       SKIP_DOMAIN_VALIDATION: "true"
+#       AIO_DISABLE_DOMAINCHECK: "true"
+#       DONT_GEN_SSL_CERT: "true"
+#       TRUSTED_PROXIES: "proxy"
+#       COLLABORA_SECCOMP_POLICY: "disabled"
+#       COLLABORA_DICTIONARIES: "en_US"
+#       COLLABORA_DOMAIN: "nextcloud.{{ domain }}"
+#       COLLABORA_ADDITIONAL_PARAMETERS: >-
+#         --o:ssl.enable=false 
+#         --o:ssl.termination=true 
+#         --o:storage.wopi.host[0]=nextcloud.{{ domain }}
+#         --o:storage.wopi.host[1]=nextcloud-aio
+#         --o:storage.wopi.host[2]=nextcloud-aio-apache
+#         --o:storage.wopi.host[3]=192.168.1.36
+#         --o:storage.wopi.host[4]=127.0.0.1/8
+#         --o:storage.wopi.host[5]=192.168.0.0/16
+#         --o:storage.wopi.host[6]=172.16.0.0/12
+#         --o:storage.wopi.host[7]=10.0.0.0/8
+#         --o:storage.wopi.host[8]=fd00::/8
+#         --o:storage.wopi.host[9]=::1
+#         --o:net.service_root=/cool
+#         --o:net.frame_ancestors=https://nextcloud.{{ domain }}
+#         --o:storage.filesystem[@allow]=true
+#     volumes:
+#       - /var/run/docker.sock:/var/run/docker.sock:ro
+#       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
+#       - "{{ brick_root }}/nextcloud/collabora/systemplate:/opt/cool/systemplate"
+#       - "{{ brick_root }}/nextcloud/collabora/child-roots:/opt/cool/child-roots"
+#     memory: "{{ nextcloud_memory_limit }}"
+#     memory_reservation: "{{ nextcloud_memory_reservation }}"
+#     cpu_shares: 1024
+#     security_opts:
+#       - "seccomp=unconfined"
+#       - "apparmor=unconfined"
+#     capabilities:
+#       - SYS_ADMIN
+#       - MKNOD
+#       - CHOWN
+#       - SYS_CHROOT
+#       - SETGID
+#       - SETUID
+#       - DAC_OVERRIDE
+#       - NET_BIND_SERVICE
+#       - CAP_CHOWN
+#     privileged: true
+
+# - name: "Wait for nextcloud-aio-collabora to be spawned"
+#   wait_for:
+#     timeout: 300  # Wait up to 5 minutes for Collabora to start
+#   delegate_to: localhost
+#   when: "'nextcloud-aio-collabora' not in (ansible_facts.docker_containers | default({}))"
+
+- name: "Add extra_hosts to nextcloud-aio-collabora"
   docker_container:
-    name: nextcloud-aio-mastercontainer 
-    image: nextcloud/all-in-one:latest
-    restart_policy: unless-stopped
-    published_ports:
-      - "8102:8080"
+    name: nextcloud-aio-collabora
+    state: started
+    restart: yes  # Force restart to apply changes
+    etc_hosts:
+      "nextcloud.{{ domain }}": 172.26.0.12
     networks:
       - name: proxy
-        aliases:
-          - nextcloud
-          - nextcloud-aio-apache
-          - collabora
-    state: 'started'
-    env:
-      # System settings
-      PUID: "{{ puid }}"
-      PGID: "{{ pgid }}"
-      TZ: "{{ timezone }}"
-      
-      # Nextcloud paths
-      NEXTCLOUD_DATADIR: "{{ brick_root }}/nextcloud/ncdata"
-      NEXTCLOUD_MOUNT: "{{ brick_root }}/nextcloud"
-      
-      # Collabora settings
-      COLLABORA_SECCOMP_DISABLED: "true"
-      COLLABORA_SECCOMP_POLICY: "disabled"
-      COLLABORA_HOST: "nextcloud.{{ domain }}"
-      COLLABORA_DICTIONARIES: "en_US"
-      COLLABORA_EXTRA_PARAMS: "--o:ssl.enable=false --o:ssl.termination=true --o:net.post_allow.host[0]=.* --o:security.capabilities=true --o:mount_jail_tree=false --o:sys_template_path=/opt/cool/systemplate --o:child_root_path=/opt/cool/child-roots --o:file_server_root_path=/usr/share/coolwsd --o:security.enable_capabilities=true"
-      COLLABORA_ARGS: "--o:security.capabilities=true --o:mount_jail_tree=false --o:security.enable_capabilities=true"
-      
-      # Apache settings
-      APACHE_PORT: "11000"
-      APACHE_IP_BINDING: "0.0.0.0"
-      APACHE_ADDITIONAL_NETWORK: "proxy"
-      APACHE_ADDITIONAL_TRUSTED_PROXIES: "0.0.0.0/0"
-      
-      # Domain and proxy settings
-      TRUSTED_PROXIES: "0.0.0.0/0" 
-      NC_DOMAIN: "nextcloud.{{ domain }}"
-      NEXTCLOUD_TRUSTED_DOMAINS: "nextcloud.{{ domain }} nextcloud-aio-apache localhost collabora nextcloud-aio-collabora" 
-      NEXTCLOUD_ADDITIONAL_TRUSTED_DOMAINS: "nextcloud-aio-apache nextcloud-aio-collabora collabora"
-      
-      # Performance and security settings
-      NEXTCLOUD_ADDITIONAL_APCU_FAST_SHUTDOWN: "1"
-      AIO_DISABLE_BACKUP_CLEANUP: "true"
-      
-      # Skip checks
-      SKIP_CAPABILITIES_CHECK: "true"
-      DONT_CHECK_SYSTEM_SETUP: "true"
-      DONT_CHECK_CONTAINER_VERSIONS: "true"
-      SKIP_DOMAIN_CHECK: "true"
-      SKIP_UPDATE_CHECK: "true"
-      SKIP_DOMAIN_VALIDATION: "true"
-      SKIP_NETWORK_CHECK: "true"
-      DONT_GEN_SSL_CERT: "true"
-      
-      # URL settings
-      OVERWRITEHOST: "nextcloud.{{ domain }}"
-      OVERWRITEPROTOCOL: "https"
-      OVERWRITECLIURL: "https://nextcloud.{{ domain }}"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
-      - "{{ brick_root }}/nextcloud:/mnt/ncdata:z"  # Add this volume with :z option
-    memory: "{{ nextcloud_memory_limit }}"
-    memory_reservation: "{{ nextcloud_memory_reservation }}"
-    security_opts:
-      - no-new-privileges:false 
-      - seccomp=unconfined     
-    capabilities:
-      - SYS_ADMIN
-      - MKNOD
-      - CHOWN
-      - FOWNER
-    privileged: true          
-    etc_hosts:
-      # Internal DNS resolution for Nextcloud and Collabora services
-      nextcloud.{{ domain }}: 127.0.0.1
-      collabora: 127.0.0.1
-      nextcloud-aio-collabora: 127.0.0.1
-    dns_servers:
-      - "{{ dns_server }}"
+      - name: nextcloud-aio
+  # when: "'nextcloud-aio-collabora' in (ansible_facts.docker_containers | default({}))"
